--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -5,8 +5,10 @@
   top: 28px;
   left: 100px;
   background: white;
-  z-index: 1000;
+  transition: top 0.3s;
+  width: 100%;
 }
+
 .nav-menu ul {
   list-style-type: none;
   padding: 0;
@@ -59,12 +61,9 @@ ul {
     gap: 1rem;
   }
   
-  .container {
-    margin-top: 60px; /* Reduced spacing */
-  }
-
   .nav-menu {
-    top: 20px;
-    left: 30px;
+    top: 0;
+    left: 0;
+    padding: 6px;
   }
 }
